tests/paczka2/big_fuzzy/16152556.err
Error in line 2: EKvpMs06oN A878 66,7
Error in line 4: cD6 A708 73,2
Error in line 8: EKvpMs06oN S636 9,0
Error in line 10: cD6 S686 2,9
Error in line 21: LvAShnf92N A878 29,7
Error in line 13: K2Bl3g S636 79,9
Error in line 22: LvAShnf92N S636 55,9
Error in line 19: A878 A708 62,8
Error in line 37: EKvpMs06oN A878 41,4
Error in line 42: EKvpMs06oN S686 2,0
Error in line 27: cD6 S636 18,7
Error in line 46: cD6 A878 62,5
Error in line 47: cD6 A708 93,6
Error in line 54: A878 A708 38,6
Error in line 52: EKvpMs06oN S636 3,9
Error in line 69: cD6 S686 32,9
Error in line 73: oW7lk0lOSSG A878 19,8
Error in line 65: K2Bl3g A708 268,3
Error in line 77: EKvpMs06oN S686 6,1
Error in line 95: ?A78
Error in line 99: EKvpMs06oN A878 50,2
Error in line 105: W7lk0lOSSG A708 96,2
Error in line 103: EKvpMs06oN A708 90,1
Error in line 106: LvAShnf92N A708 33,8
Error in line 115: cD6 S636 85,1
Error in line 120: A878 S636 52,6
Error in line 107: oW7lk0lOSSG A708 25,0
Error in line 127: oW7lk0lOSSG S686 64,2
Error in line 139: A878 A878 -1,1
Error in line 125: cD6 S686 10,0
Error in line 143: cD6 S686 95,9
Error in line 144: cD6 A878 95,4
Error in line 146: LvAShnf92N A708 668,0
Error in line 148: cD6 A708 73,8
Error in line 162: LvAShnf92N S636 68,1
Error in line 169: xMoxV1G5Di S686 26,1
Error in line 172: ëS686
Error in line 174: xMoxV1G5Di A878 94,5
Error in line 165: LvAShnf92N A878 65,9
Error in line 171: cD6 S636 105,0
Error in line 179: xMoxV1G5Di A708 72,5
Error in line 184: xMoxV1G5Di S636 69,9
Error in line 157: A878 A878 11,3
Error in line 183: EKvpMs06oN S636 86,4
Error in line 186: xMoxV1G5Di S686 514,8
Error in line 185: K2Bl3g A708 82,5
Error in line 193: K2Bl3g A878 56,8
Error in line 203: A878 S686 50,0
Error in line 191: cD6 A878 34,6
Error in line 213: K2Bl3g A708 84,2
Error in line 214: K2Bl3g S636 40,5
Error in line 227: oW7lk0lOSSG S636 22,52
Error in line 224: oW7lk0lOSSG S636 7,4
Error in line 230: K2Bl3g S636 98,05
Error in line 229: K2Bl3g A878 84,3
Error in line 233: K2Bl3g S636 105,4
